--- a/templates/oportunidades.html
+++ b/templates/oportunidades.html
@@ -51,8 +51,11 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary cerrar-modal" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="submit" class="btn btn-primary" id="anadirActividadesAOpotunidad"><i class="fa-solid fa-pen-to-square"></i>&nbsp;Añadir
+                            <button type="button" class="btn btn-secondary cerrar-modal" data-bs-dismiss="modal">
+                                Cerrar
+                            </button>
+                            <button type="submit" class="btn btn-primary" id="anadirActividadesAOpotunidad"><i
+                                    class="fa-solid fa-pen-to-square"></i>&nbsp;Añadir
                                 actividades a la oportunidad
                             </button>
                         </div>
@@ -105,8 +108,11 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary cerrar-modal" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="submit" class="btn btn-primary" id="anadirClientesAOpotunidad"><i class="fa-solid fa-pen-to-square"></i>&nbsp;Añadir
+                            <button type="button" class="btn btn-secondary cerrar-modal" data-bs-dismiss="modal">
+                                Cerrar
+                            </button>
+                            <button type="submit" class="btn btn-primary" id="anadirClientesAOpotunidad"><i
+                                    class="fa-solid fa-pen-to-square"></i>&nbsp;Añadir
                                 clientes a la oportunidad
                             </button>
                         </div>
@@ -204,7 +210,6 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="nuevo" role="tabpanel" aria-labelledby="nuevo-tab">
                         <!-- Nuevo -->
-                        {% set hay_nuevo = false %}
                         {% if oportunidades %}
                             <div class="table-responsive">
                                 <table class="table table-striped table-hover">
@@ -215,14 +220,13 @@
                                         <th>Ver clientes</th>
                                         <th>Prioridad</th>
                                         <th>Ingreso</th>
-                                        <th>Editar</th>
-                                        <th>Emilinar</th>
+                                        <th class="text-center">Editar</th>
+                                        <th class="text-center">Borrar</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     {% for oportunidad in oportunidades %}
                                         {% if oportunidad.etapa == "nuevo" %}
-                                            {% set hay_nuevo = true %}
                                             <tr>
                                                 <td>{{ oportunidad.id }}</td>
                                                 <td>Ver actividadades</td>
@@ -245,26 +249,137 @@
                                 </table>
                             </div>
                         {% endif %}
-                        {% if hay_nuevo == false %}
-                            <div class="p-4">
-                                <div class="alert alert-warning text-center" role="alert">
-                                    <strong>No hay oportunidades en nuevo</strong>
-                                </div>
-                            </div>
-                        {% endif %}
+
                     </div>
                     <div class="tab-pane fade" id="calificado" role="tabpanel" aria-labelledby="calificado-tab">
                         <!-- Calificado -->
+                        {% if oportunidades %}
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Ver actividades</th>
+                                        <th>Ver clientes</th>
+                                        <th>Prioridad</th>
+                                        <th>Ingreso</th>
+                                        <th>Editar</th>
+                                        <th>Emilinar</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for oportunidad in oportunidades %}
+                                        {% if oportunidad.etapa == "calificado" %}
+                                            <tr>
+                                                <td>{{ oportunidad.id }}</td>
+                                                <td>Ver actividadades</td>
+                                                <td>Ver clientes</td>
+                                                <td>{{ oportunidad.prioridad }}</td>
+                                                <td>{{ oportunidad.ingreso }}€</td>
+                                                <td class="text-center"><a class="text-primary"
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
+                                                                           data-bs-toggle="modal"
+                                                                           data-bs-target="#modal-modificar-cliente"
+                                                                           onclick="abrirModalModificarUsuario()"><i
+                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                <td class="text-center"><a class="text-danger"
+                                                                           href="/oportunidades/delete?id={{ oportunidad.id }}"><i
+                                                        class="fa-solid fa-trash-can"></i></a></td>
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% endif %}
 
 
                     </div>
                     <div class="tab-pane fade" id="propuesta" role="tabpanel" aria-labelledby="propuesta-tab">
                         <!-- Propuesta -->
+                        {% if oportunidades %}
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Ver actividades</th>
+                                        <th>Ver clientes</th>
+                                        <th>Prioridad</th>
+                                        <th>Ingreso</th>
+                                        <th>Editar</th>
+                                        <th>Emilinar</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for oportunidad in oportunidades %}
+                                        {% if oportunidad.etapa == "propuesta" %}
+                                            <tr>
+                                                <td>{{ oportunidad.id }}</td>
+                                                <td>Ver actividadades</td>
+                                                <td>Ver clientes</td>
+                                                <td>{{ oportunidad.prioridad }}</td>
+                                                <td>{{ oportunidad.ingreso }}€</td>
+                                                <td class="text-center"><a class="text-primary"
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
+                                                                           data-bs-toggle="modal"
+                                                                           data-bs-target="#modal-modificar-cliente"
+                                                                           onclick="abrirModalModificarUsuario()"><i
+                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                <td class="text-center"><a class="text-danger"
+                                                                           href="/oportunidades/delete?id={{ oportunidad.id }}"><i
+                                                        class="fa-solid fa-trash-can"></i></a></td>
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% endif %}
 
 
                     </div>
                     <div class="tab-pane fade" id="ganada" role="tabpanel" aria-labelledby="ganada-tab">
                         <!-- Ganada -->
+                        {% if oportunidades %}
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Ver actividades</th>
+                                        <th>Ver clientes</th>
+                                        <th>Prioridad</th>
+                                        <th>Ingreso</th>
+                                        <th>Editar</th>
+                                        <th>Emilinar</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for oportunidad in oportunidades %}
+                                        {% if oportunidad.etapa == "ganada" %}
+                                            <tr>
+                                                <td>{{ oportunidad.id }}</td>
+                                                <td>Ver actividadades</td>
+                                                <td>Ver clientes</td>
+                                                <td>{{ oportunidad.prioridad }}</td>
+                                                <td>{{ oportunidad.ingreso }}€</td>
+                                                <td class="text-center"><a class="text-primary"
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
+                                                                           data-bs-toggle="modal"
+                                                                           data-bs-target="#modal-modificar-cliente"
+                                                                           onclick="abrirModalModificarUsuario()"><i
+                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                <td class="text-center"><a class="text-danger"
+                                                                           href="/oportunidades/delete?id={{ oportunidad.id }}"><i
+                                                        class="fa-solid fa-trash-can"></i></a></td>
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% endif %}
 
 
                     </div>
