--- a/templates/oportunidades.html
+++ b/templates/oportunidades.html
@@ -295,10 +295,7 @@
                                                 <td>{{ oportunidad.ingreso }}€</td>
                                                 <td class="text-center"><a class="text-primary"
                                                                            href="/oportunidades/edit?id={{ oportunidad.id }}"
-                                                                           data-bs-toggle="modal"
-                                                                           data-bs-target="#modal-modificar-cliente"
-                                                                           onclick="abrirModalModificarUsuario()"><i
-                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                ><i class="fa-solid fa-square-pen"></i></a></td>
                                                 <td class="text-center"><a class="text-danger"
                                                                            href="/oportunidades/delete?id={{ oportunidad.id }}"><i
                                                         class="fa-solid fa-trash-can"></i></a></td>
@@ -351,11 +348,8 @@
                                                 <td>{{ oportunidad.prioridad }}</td>
                                                 <td>{{ oportunidad.ingreso }}€</td>
                                                 <td class="text-center"><a class="text-primary"
-                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
-                                                                           data-bs-toggle="modal"
-                                                                           data-bs-target="#modal-modificar-cliente"
-                                                                           onclick="abrirModalModificarUsuario()"><i
-                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}">
+                                                    <i class="fa-solid fa-square-pen"></i></a></td>
                                                 <td class="text-center"><a class="text-danger"
                                                                            href="/oportunidades/delete?id={{ oportunidad.id }}"><i
                                                         class="fa-solid fa-trash-can"></i></a></td>
@@ -409,11 +403,8 @@
                                                 <td>{{ oportunidad.prioridad }}</td>
                                                 <td>{{ oportunidad.ingreso }}€</td>
                                                 <td class="text-center"><a class="text-primary"
-                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
-                                                                           data-bs-toggle="modal"
-                                                                           data-bs-target="#modal-modificar-cliente"
-                                                                           onclick="abrirModalModificarUsuario()"><i
-                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}">
+                                                    <i class="fa-solid fa-square-pen"></i></a></td>
                                                 <td class="text-center"><a class="text-danger"
                                                                            href="/oportunidades/delete?id={{ oportunidad.id }}"><i
                                                         class="fa-solid fa-trash-can"></i></a></td>
@@ -467,14 +458,11 @@
                                                 <td>{{ oportunidad.prioridad }}</td>
                                                 <td>{{ oportunidad.ingreso }}€</td>
                                                 <td class="text-center"><a class="text-primary"
-                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}"
-                                                                           data-bs-toggle="modal"
-                                                                           data-bs-target="#modal-modificar-cliente"
-                                                                           onclick="abrirModalModificarUsuario()"><i
-                                                        class="fa-solid fa-square-pen"></i></a></td>
+                                                                           href="/oportunidades/edit?id={{ oportunidad.id }}">
+                                                    <i class="fa-solid fa-square-pen"></i></a></td>
                                                 <td class="text-center"><a class="text-danger"
-                                                                           href="/oportunidades/delete?id={{ oportunidad.id }}"><i
-                                                        class="fa-solid fa-trash-can"></i></a></td>
+                                                                           href="/oportunidades/delete?id={{ oportunidad.id }}">
+                                                    <i class="fa-solid fa-trash-can"></i></a></td>
                                             </tr>
                                         {% endif %}
                                     {% endfor %}
