--- a/templates/informes.html
+++ b/templates/informes.html
@@ -1,5 +1,69 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Informes</h1>
+    <h1>Informes</h1>
+    {% if graficos %}
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Número de oportunidades en cada etapa
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                     data-bs-parent="#accordionExample">
+                    <div class="accordion-body text-center">
+                        {% if graficos["etapas"] == "Error" %}
+                            <p>No hay datos suficientes para poder generar los graficos</p>
+                        {% else %}
+                            <img src="/static/img/{{ graficos["etapas"] }}" alt="Número de oportunidades en cada etapa">
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Prioridades
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                     data-bs-parent="#accordionExample">
+                    <div class="accordion-body text-center">
+                        {% if graficos["prioridades"] == "Error" %}
+                            <p>No hay datos suficientes para poder generar los graficos</p>
+                        {% else %}
+                            <img src="/static/img/{{ graficos["prioridades"] }}" alt="Número de oportunidades en cada etapa">
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Importe de oportunidades
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                     data-bs-parent="#accordionExample">
+                    <div class="accordion-body text-center">
+                        {% if graficos["ingresos"] == "Error" %}
+                            <p>No hay datos suficientes para poder generar los graficos</p>
+                        {% else %}
+                            <img src="/static/img/{{ graficos["ingresos"] }}" alt="Número de oportunidades en cada etapa">
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% else %}
+        <p>No hay informes</p>
+    {% endif %}
+
+
+
+
 {% endblock %}
