--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
             <a class="navbar-brand" href="/"><i class="fas fa-box"></i>&nbsp;Módulo CRM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,7 +51,7 @@
     </nav>
 </header>
 <main>
-    <div class="container p-3">
+    <div class="container p-3 pt-5 mt-3">
 
         {% block content %}
         {% endblock %}
